[package]
name = "param_hook"
version = "13.0.1"
authors = ["jugeeya <jugeeya@live.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git", features = ["params_internal"] }
parking_lot = { version = "0.11.0", features = ["nightly"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
